--- a/net-im/folks/Makefile
+++ b/net-im/folks/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	folks
 PORTVERSION=	0.15.5
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	net-im
 MASTER_SITES=	GNOME
 
@@ -12,7 +12,7 @@ LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libgee-0.8.so:devel/libgee \
-		libgcr-base-3.so:security/gcr \
+		libgcr-base-3.so:security/gcr3 \
 		libzeitgeist-2.0.so:sysutils/zeitgeist \
 		libtelepathy-glib.so:net-im/telepathy-glib \
 		libnspr4.so:devel/nspr \
@@ -22,7 +22,7 @@ LIB_DEPENDS=	libgee-0.8.so:devel/libgee \
 		libdbus-glib-1.so:devel/dbus-glib \
 		libdbus-1.so:devel/dbus
 
-USES=		gettext gnome localbase meson python:3.5+,build pkgconfig \
+USES=		gettext gnome localbase meson python:build pkgconfig \
 		readline sqlite tar:xz vala:build
 USE_GNOME=	evolutiondataserver3 intlhack introspection:build
 USE_LDCONFIG=	yes
@@ -36,5 +36,6 @@ GLIB_SCHEMAS=	org.freedesktop.folks.gschema.xml
 PLIST_SUB=	LIBVER=26 LIBVERLONG=26.0.0
 
 BINARY_ALIAS=	python3=${PYTHON_CMD}
+PORTSCOUT=	limitw:1,even
 
 .include <bsd.port.mk>
