--- a/x11-fm/sushi/Makefile
+++ b/x11-fm/sushi/Makefile
@@ -7,11 +7,12 @@ DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tool similar to Gloobus Preview that provides quick file previews
+WWW=		https://gitlab.gnome.org/GNOME/sushi
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libgcr-base-3.so:security/gcr \
+LIB_DEPENDS=	libgcr-base-3.so:security/gcr3 \
 		libgjs.so:lang/gjs \
 		libclutter-gtk-1.0.so:graphics/clutter-gtk3 \
 		libclutter-gst-3.0.so:multimedia/clutter-gst3 \
