--- a/devel/libpciaccess/Makefile
+++ b/devel/libpciaccess/Makefile
@@ -1,9 +1,10 @@
 PORTNAME=	libpciaccess
-PORTVERSION=	0.16
+PORTVERSION=	0.18.1
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Generic PCI access library
+WWW=		https://www.freedesktop.org/wiki/Software/xlibs/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -11,10 +12,8 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 BUILD_DEPENDS=	${LOCALBASE}/share/pciids/pci.ids:misc/pciids
 RUN_DEPENDS=	${LOCALBASE}/share/pciids/pci.ids:misc/pciids
 
-CONFIGURE_ARGS=	--with-pciids-path=${LOCALBASE}/share/pciids
-CONFIGURE_TARGET=	${ARCH}-portbld-freebsd11.4
-
-USES=		xorg xorg-cat:lib
+meson_ARGS=	
+USES=		tar:xz xorg xorg-cat:lib,meson
 INSTALL_TARGET=	install-strip
 
 .include <bsd.port.mk>
