--- a/security/tor/Makefile
+++ b/security/tor/Makefile
@@ -1,32 +1,34 @@
 PORTNAME=	tor
-DISTVERSION=	0.4.7.7
+DISTVERSION=	0.4.8.13
 CATEGORIES=	security net
 MASTER_SITES=	TOR
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Anonymizing overlay network for TCP
+WWW=		https://www.torproject.org/
 
 LICENSE=	bsd3
-LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		compiler:c11 cpe gmake pkgconfig # should be compiler:c99 or compiler:gnu99
 USE_CSTD=	gnu99 # until this bug report is closed: https://trac.torproject.org/projects/tor/ticket/27900
 
 CPE_VENDOR=	torproject
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-openssl-dir="${OPENSSLBASE}" --disable-asciidoc
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
+CONFIGURE_ARGS=	--with-openssl-dir="${OPENSSLBASE}"
 CONFIGURE_ENV=	TOR_CPPFLAGS_libevent="-I${LOCALBASE}/include" \
 		TOR_LDFLAGS_libevent="-L${LOCALBASE}/lib/" \
 		TOR_LIBEVENT_LIBS="${TOR_LIBEVENT_LIBS}"
 
-OPTIONS_DEFINE=	MANPAGES DOCS STATIC_TOR TCMALLOC
-OPTIONS_GROUP=	COMPRESSION
-OPTIONS_GROUP_COMPRESSION=ZSTD LZMA
-OPTIONS_DEFAULT=MANPAGES ZSTD LZMA
+OPTIONS_DEFINE=	DOCS MANPAGES POW STATIC_TOR TCMALLOC
+OPTIONS_GROUP=	COMPRESSION TRACING
+OPTIONS_GROUP_COMPRESSION=	ZSTD LZMA
+OPTIONS_GROUP_TRACING=	LTTNG USDT LOG_DEBUG
+OPTIONS_DEFAULT=	MANPAGES POW LZMA ZSTD
 OPTIONS_SUB=	yes
 STATIC_TOR_DESC=	Build a static tor
-TCMALLOC_DESC=		Use the tcmalloc memory allocation library
 COMPRESSION_DESC=	Supported compression libraries
+TRACING_DESC=		Tracing
 
 USE_RC_SUBR=	tor
 SUB_FILES=	pkg-message
@@ -36,14 +38,30 @@ PLIST_SUB=	USER="${USERS}" GROUP="${GROUPS}"
 GROUPS=		_tor
 USERS=		_tor
 
-CONFLICTS_INSTALL=	tor-devel-[0-9]*
+CONFLICTS_INSTALL=	tor-devel
+
+POW_DESC=		Enable PoW (Proof of Work) module (licence changes to GPL)
+POW_CONFIGURE_ENABLE=	gpl # gpl enables POW
 
 STATIC_TOR_USES=	ssl:build
 STATIC_TOR_USES_OFF=	ssl
 
+# compression options
 ZSTD_CONFIGURE_ENABLE=		zstd
 ZSTD_CONFIGURE_ENV=TOR_ZSTD_LIBS="${TOR_ZSTD_LIBS}"
 LZMA_CONFIGURE_ENABLE=		lzma
+
+# tracing options
+LTTNG_DESC=			Build with LTTng-UST instrumentation
+LTTNG_USES=			localbase
+LTTNG_CONFIGURE_ENABLE=		tracing-instrumentation-lttng
+LTTNG_LIB_DEPENDS=		liblttng-ust.so:sysutils/lttng-ust
+USDT_DESC=			Build with tracing USDT instrumentation
+USDT_CONFIGURE_ENABLE=		tracing-instrumentation-usdt
+USDT_LIB_DEPENDS=		liblttng-ust.so:sysutils/lttng-ust
+USDT_BROKEN=			error: use of undeclared identifier 'tor_circuit': https://gitlab.torproject.org/tpo/core/tor/-/issues/40174#note_2714275
+LOG_DEBUG_DESC=			Build with tracing event to debug log
+LOG_DEBUG_CONFIGURE_ENABLE=	tracing-instrumentation-log-debug
 
 .include <bsd.mport.options.mk>
 
@@ -53,7 +71,13 @@ BUILD_DEPENDS+=	asciidoc:textproc/asciidoc
 CONFIGURE_ARGS+=	--disable-asciidoc
 .endif
 
-.if !defined(USE_GCC) && empty(CC:T:M*gcc4*) && \
+.if ${PORT_OPTIONS:MPOW}
+LICENSE=	gpl3
+.else
+LICENSE_FILE=	${WRKSRC}/LICENSE # BSD license file
+.endif
+
+.if !defined(USE_GCC) && \
 empty(PORT_OPTIONS:MSTATIC_TOR)
 CONFIGURE_ARGS+=	--enable-gcc-hardening
 .else
@@ -68,6 +92,7 @@ TOR_LIBEVENT_LIBS=	${LOCALBASE}/lib/libevent.a
 .  if ${PORT_OPTIONS:MZSTD}
 BUILD_DEPENDS+=		${LOCALBASE}/lib/libzstd.a:archivers/zstd
 TOR_ZSTD_LIBS=		${LOCALBASE}/lib/libzstd.a
+LDFLAGS+=		-lelf # needed by libexecinfo.a
 .  endif
 .else
 CONFIGURE_ARGS+=	--enable-linker-hardening
@@ -82,7 +107,9 @@ TOR_ZSTD_LIBS=		-lzstd
 .if ${PORT_OPTIONS:MTCMALLOC}
 CONFIGURE_ARGS+=	--with-malloc=tcmalloc
 .if ${PORT_OPTIONS:MSTATIC_TOR}
-BUILD_DEPENDS+=		${LOCALBASE}/lib/libtcmalloc.a:devel/google-perftools
+BUILD_DEPENDS+=		${LOCALBASE}/lib/libtcmalloc.a:devel/google-perftools # for static 'tor' executable
+RUN_DEPENDS+=		google-perftool>0:devel/google-perftools # for a still-dynamic 'tor-gencert' executable
+LDFLAGS+=		-lc++ -lm # required by libtcmalloc.a and isn't cocered by google-perftools' `pkg-config --libs libtcmalloc` output
 .else
 LIB_DEPENDS+=		libtcmalloc.so:devel/google-perftools
 .endif
@@ -95,14 +122,6 @@ post-patch:
 		${WRKSRC}/src/config/torrc.*.in \
 		${WRKSRC}/doc/man/tor.1.* \
 		${WRKSRC}/doc/man/tor.html.in
-
-post-patch-STATIC_TOR-off:
-	@${REINPLACE_CMD} -e "s@-ltcmalloc@${LOCALBASE}/lib/libtcmalloc.so@" \
-		${WRKSRC}/configure
-
-post-patch-STATIC_TOR-on:
-	@${REINPLACE_CMD} -e "s@-ltcmalloc@${LOCALBASE}/lib/libtcmalloc.a@" \
-		${WRKSRC}/configure
 
 post-install:
 	@${MKDIR} ${FAKE_DESTDIR}/var/log/tor ${FAKE_DESTDIR}/var/run/tor ${FAKE_DESTDIR}/var/db/tor
