--- a/security/nettle/Makefile
+++ b/security/nettle/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	nettle
-PORTVERSION=	3.9.1
+PORTVERSION=	3.10.1
 CATEGORIES=	security
 MASTER_SITES=	GNU \
 		https://www.lysator.liu.se/~nisse/archive/
@@ -14,9 +14,9 @@ LICENSE_COMB=	multi
 BUILD_DEPENDS=	gmp>=6.1.0:math/gmp
 LIB_DEPENDS=	libgmp.so:math/gmp
 
-USES=		compiler:c11 cpe gmake localbase makeinfo pathfix
+USES=		compiler:c11 cpe gmake localbase pathfix
 
-CONFIGURE_ARGS=	--enable-shared
+CONFIGURE_ARGS=	--enable-ld-version-script --enable-shared
 CONFIGURE_ENV=	M4="/usr/bin/m4 -g"
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
@@ -33,8 +33,14 @@ EXAMPLES_EXTRA_PATCHES_OFF=	${PATCHDIR}/extra-patch-Makefile.in
 
 .include <bsd.mport.options.mk>
 
+.if ${ARCH} == "mips64"
+post-patch:
+	@${REINPLACE_CMD} -e 's|__sgi|__unix__|' ${WRKSRC}/configure
+.endif
+
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/lib*.so
+	${INSTALL_DATA} ${WRKSRC}/nettle.info ${STAGEDIR}${PREFIX}/${INFO_PATH}/nettle.info
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
