devel/gflags: modernize

--- a/devel/gflags/Makefile
+++ b/devel/gflags/Makefile
@@ -1,21 +1,26 @@
 PORTNAME=	gflags
 PORTVERSION=	2.2.2
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Commandline flags module for C++
+WWW=		https://github.com/gflags/gflags
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/COPYING.txt
 
-USES=		cmake compiler:c++11-lang pathfix shebangfix
+USES=		cmake:testing compiler:c++11-lang pathfix shebangfix
 
 CMAKE_ARGS=	-DGFLAGS_NAMESPACE:STRING=gflags
-CMAKE_OFF=	REGISTER_INSTALL_PREFIX
-CMAKE_ON=	BUILD_SHARED_LIBS BUILD_STATIC_LIBS BUILD_TESTING \
-		INSTALL_HEADERS INSTALL_SHARED_LIBS INSTALL_STATIC_LIBS
-TEST_TARGET=	test
+CMAKE_OFF=	BUILD_TESTING \
+		REGISTER_INSTALL_PREFIX
+CMAKE_ON=	BUILD_SHARED_LIBS \
+		BUILD_STATIC_LIBS \
+		INSTALL_HEADERS \
+		INSTALL_SHARED_LIBS \
+		INSTALL_STATIC_LIBS
 USE_CXXSTD=	c++11
 USE_LDCONFIG=	yes
 
