--- a/dns/Makefile
+++ b/dns/Makefile
@@ -36,6 +36,10 @@ SUBDIR += p5-Net-DNS
 SUBDIR += p5-Net-DNS-Resolver-Mock
 SUBDIR += p5-Net-DNS-Resolver-Programmable
 SUBDIR += p5-Net-LibIDN
+SUBDIR += p5-POE-Component-Client-DNS
+SUBDIR += p5-POE-Component-Client-DNS-Recursive
+SUBDIR += p5-POE-Component-Client-DNSBL
+SUBDIR += p5-POE-Component-Resolver
 SUBDIR += pdnsd
 SUBDIR += pear-File_DNS
 SUBDIR += pear-Horde_Idna
