--- a/net/Makefile
+++ b/net/Makefile
@@ -136,15 +136,19 @@ SUBDIR += p5-Net
 SUBDIR += p5-Net-CIDR-Lite
 SUBDIR += p5-Net-FTP-File
 SUBDIR += p5-Net-HTTP
+SUBDIR += p5-Net-IP-Minimal
 SUBDIR += p5-Net-Libdnet
 SUBDIR += p5-Net-RabbitMQ
 SUBDIR += p5-Net-Server
 SUBDIR += p5-Net-Telnet
 SUBDIR += p5-Net-Works
 SUBDIR += p5-Net-XWhois
+SUBDIR += p5-POE-Component-Client-Keepalive
+SUBDIR += p5-POE-Component-Generic
 SUBDIR += p5-RPC-XML
 SUBDIR += p5-SOAP-Lite
 SUBDIR += p5-Socket
+SUBDIR += p5-Socket-GetAddrInfo
 SUBDIR += p5-Socket6
 SUBDIR += p5-URI
 SUBDIR += p5-XML-RPC
