--- a/devel/Makefile
+++ b/devel/Makefile
@@ -647,6 +647,7 @@ SUBDIR += p5-Net-DBus
 SUBDIR += p5-OLE-Storage_Lite
 SUBDIR += p5-Opcodes
 SUBDIR += p5-PAR-Dist
+SUBDIR += p5-POE-Test-Loops
 SUBDIR += p5-POSIX-strftime-Compiler
 SUBDIR += p5-POSIX-strptime
 SUBDIR += p5-Package-Constants
