--- a/dns/Makefile
+++ b/dns/Makefile
@@ -40,6 +40,8 @@ SUBDIR += p5-POE-Component-Client-DNS
 SUBDIR += p5-POE-Component-Client-DNS-Recursive
 SUBDIR += p5-POE-Component-Client-DNSBL
 SUBDIR += p5-POE-Component-Resolver
+SUBDIR += p5-POE-Component-Server-DNS
+SUBDIR += p5-POE-Filter-DNS-TCP
 SUBDIR += pdnsd
 SUBDIR += pear-File_DNS
 SUBDIR += pear-Horde_Idna
