--- a/www/Makefile
+++ b/www/Makefile
@@ -151,6 +151,9 @@ SUBDIR += p5-Mojolicious
 SUBDIR += p5-Mojo-IOLoop-Delay
 SUBDIR += p5-Mojo-IOLoop-ForkCall
 SUBDIR += p5-Mozilla-CA
+SUBDIR += p5-POE-Component-Client-HTTP
+SUBDIR += p5-POE-Component-Client-UserAgent
+SUBDIR += p5-ParallelUserAgent
 SUBDIR += p5-Plack
 SUBDIR += p5-Router-Simple
 SUBDIR += p5-Template-GD
