devel/Makefile: index

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -648,6 +648,8 @@ SUBDIR += p5-Net-DBus
 SUBDIR += p5-OLE-Storage_Lite
 SUBDIR += p5-Opcodes
 SUBDIR += p5-PAR-Dist
+SUBDIR += p5-POE
+SUBDIR += p5-POE-API-Peek
 SUBDIR += p5-POE-Test-Loops
 SUBDIR += p5-POSIX-strftime-Compiler
 SUBDIR += p5-POSIX-strptime
