add xnvme (needs testing)

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -243,6 +243,7 @@ SUBDIR += xfce4-settings
 SUBDIR += xfce4-systemload-plugin
 SUBDIR += xfce4-wavelan-plugin
 SUBDIR += xfsprogs
+SUBDIR += xnvme
 SUBDIR += xosview
 SUBDIR += xxd
 SUBDIR += zeitgeist
