add opensearch versions, opensearch-dashboard

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -117,7 +117,11 @@ SUBDIR += minixmlto
 SUBDIR += mythes
 SUBDIR += openjade
 SUBDIR += opensearch
+SUBDIR += opensearch-dashboards
 SUBDIR += opensearch13
+SUBDIR += opensearch210
+SUBDIR += opensearch213
+SUBDIR += opensearch216
 SUBDIR += opensp
 SUBDIR += p5-HTML-Format
 SUBDIR += p5-HTML-Tidy
