--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -118,6 +118,9 @@ SUBDIR += mythes
 SUBDIR += openjade
 SUBDIR += opensearch
 SUBDIR += opensearch-dashboards
+SUBDIR += opensearch-dashboards210
+SUBDIR += opensearch-dashboards213
+SUBDIR += opensearch-dashboards216
 SUBDIR += opensearch13
 SUBDIR += opensearch210
 SUBDIR += opensearch213
