--- a/databases/py-aiopg/Makefile
+++ b/databases/py-aiopg/Makefile
@@ -1,25 +1,24 @@
-# Created by: Babak Farrokhi <farrokhi@FreeBSD.org>
-
 PORTNAME=	aiopg
-PORTVERSION=	1.1.0
-PORTREVISION=	0
+PORTVERSION=	1.4.0
 CATEGORIES=	databases python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python library for accessing PostgreSQL database using asyncio
+WWW=		https://github.com/aio-libs/aiopg
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}psycopg2>=2.7.0:databases/py-psycopg2@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}psycopg2>=2.7.0:databases/py-psycopg2@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}async_timeout>=3.0.0:devel/py-async_timeout@${PY_FLAVOR}
+
+USES=		pgsql:11+ python
+USE_PYTHON=	autoplist concurrent distutils
+NO_ARCH=	yes
 
 OPTIONS_DEFINE=	DOCS
-
-USES=		pgsql:9.2+ python:3.4+
-USE_PYTHON=	autoplist concurrent distutils
-
 PORTDOCS=	PKG-INFO README.rst CHANGES.txt
 
 post-install-DOCS-on:
