x11/runner: fix build

--- a/x11/runner/Makefile
+++ b/x11/runner/Makefile
@@ -6,6 +6,7 @@ MASTER_SITES=	http://www.boomerangsworld.de/cms/tools/downloads/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast program launch menu for X Window System
+WWW=		http://www.boomerangsworld.de/cms/tools/runner.html
 
 LICENSE=	gpl2+
 
@@ -13,7 +14,7 @@ USES=		compiler:c++0x tar:bzip2 xorg
 GNU_CONFIGURE=	yes
 USE_XORG=	ice sm x11 xft xinerama
 
-USE_GCC=	12+
+USE_GCC=	13+
 
 PLIST_FILES=	bin/${PORTNAME} ${DATADIR_REL}/program_list
 PORTDOCS=	AUTHORS ChangeLog README
