fix some bugs with the ncuses extension

--- a/www/gopherus/Makefile
+++ b/www/gopherus/Makefile
@@ -11,8 +11,8 @@ LICENSE=	bsd2
 
 USES=		ncurses tar:xz uidfix
 MAKEFILE=	${FILESDIR}/Makefile
-CFLAGS+=	-I${NCURSESINC}
-LDFLAGS+=	-L${NCURSESLIB} ${NCURSESLIBS}
+CFLAGS+=	-I${NCURSESINC} -I${LOCALBASE}/include
+LDFLAGS+=	-L${NCURSESLIB} ${NCURSESLIBS} 
 
 PLIST_FILES=	bin/gopherus
 
