update node version list

--- a/www/Makefile
+++ b/www/Makefile
@@ -319,6 +319,7 @@ SUBDIR += yabb
 SUBDIR += yarn
 SUBDIR += yarn-node18
 SUBDIR += yarn-node20
+SUBDIR += yarn-node22
 SUBDIR += yt-dlp
 SUBDIR += ytdl
 SUBDIR += yuicompressor
