--- a/databases/Makefile
+++ b/databases/Makefile
@@ -40,6 +40,8 @@ SUBDIR += linux-rl9-sqlite3
 SUBDIR += lmdb
 SUBDIR += mariadb106-client
 SUBDIR += mariadb106-server
+SUBDIR += mariadb114-client
+SUBDIR += mariadb114-server
 SUBDIR += mdbtools
 SUBDIR += memcached
 SUBDIR += mongodb50
