--- a/devel/py-websockets/Makefile
+++ b/devel/py-websockets/Makefile
@@ -1,18 +1,22 @@
 PORTNAME=	websockets
-PORTVERSION=	12.0
+PORTVERSION=	15.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Implementation of the WebSocket Protocol (RFC 6455 and 7692)
-WWW=		https://pypi.org/project/websockets/
+WWW=		https://pypi.org/project/websockets/ \
+		https://github.com/python-websockets/websockets
 
 LICENSE=	bsd3
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=39.2.0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+
 USES=		cpe python
 CPE_VENDOR=	${PORTNAME}_project
-USE_PYTHON=	autoplist distutils
+USE_PYTHON=	autoplist pep517
 
 post-install:
 	@${STRIP_CMD} ${FAKE_DESTDIR}${PYTHON_SITELIBDIR}/websockets/speedups*.so
