--- a/databases/Makefile
+++ b/databases/Makefile
@@ -159,6 +159,9 @@ SUBDIR += py-hiredis
 SUBDIR += py-mysql2pgsql
 SUBDIR += py-postgresql
 SUBDIR += py-pg8000
+SUBDIR += py-psycopg
+SUBDIR += py-psycopg-c
+SUBDIR += py-psycopg-pool
 SUBDIR += py-psycopg2
 SUBDIR += py-pymongo
 SUBDIR += py-pymysql
