--- a/databases/mdbtools/Makefile
+++ b/databases/mdbtools/Makefile
@@ -1,34 +1,51 @@
 PORTNAME=	mdbtools
-PORTVERSION=	0.7.1
-PORTREVISION=	1
+DISTVERSION=	1.0.1
 CATEGORIES=	databases
+MASTER_SITES=	https://github.com/${PORTNAME}/${PORTNAME}/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Utilities and libraries to export data from MS Access databases (.mdb)
+WWW=		https://github.com/mdbtools/mdbtools/
 
 LICENSE=	gpl2
 
-BUILD_DEPENDS=	gawk:lang/gawk \
-		txt2man:textproc/txt2man
-LIB_DEPENDS=	libodbc.so:databases/unixODBC
+BUILD_DEPENDS=	bash-completion>=0:shells/bash-completion \
+		flex:textproc/flex \
+		gawk:lang/gawk
+LIB_DEPENDS=	libodbcinst.so:databases/unixODBC
+RUN_DEPENDS=	bash-completion>=0:shells/bash-completion
 
-OPTIONS_DEFINE=	GNOME DOCS
-OPTIONS_SUB=	yes
-
-USES=		autoreconf bison gettext-runtime gnome iconv libtool pathfix pkgconfig readline
-USE_GITHUB=	yes
-GH_ACCOUNT=	brianb
-USE_LDCONFIG=	yes
+USES=		bison cpe gnome iconv:wchar_t libtool pathfix \
+		pkgconfig readline
+CPE_VENDOR=	mdbtools_project
 USE_GNOME=	glib20
+USE_LDCONFIG=	yes
+
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	${ICONV_CONFIGURE_ARG} \
 		--with-unixodbc=${LOCALBASE}
+
+DOCS=		AUTHORS HACKING.md NEWS README.md
+
 INSTALL_TARGET=	install-strip
 
-DOCS=		AUTHORS ChangeLog HACKING NEWS README TODO
+OPTIONS_DEFINE=		DOCS MANPAGES LIBMSWSTR NLS
+OPTIONS_DEFAULT=	MANPAGES
+OPTIONS_SUB=		yes
 
-GNOME_CONFIGURE_ENABLE=	gmdb2
-GNOME_USE=	GNOME=gnomeprefix GNOME=libgnomeui GNOME=gconf2 GNOME=intltool
+LIBMSWSTR_DESC=	Read and parse JET 4 mdb file indices
+
+LIBMSWSTR_LIB_DEPENDS=		libmswstr.so:databases/libmswstr
+LIBMSWSTR_CONFIGURE_ENV_OFF=	ac_cv_lib_mswstr_DBLCMapStringW=no
+
+MANPAGES_CONFIGURE_OFF=		--disable-man
+
+NLS_USES=			gettext
+
+post-configure:
+	@${REINPLACE_CMD} -e \
+		's|libdir = $${exec_prefix}/lib/odbc|libdir = $${exec_prefix}/lib|' \
+		${WRKSRC}/src/odbc/Makefile
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
