--- a/databases/Makefile
+++ b/databases/Makefile
@@ -38,6 +38,7 @@ SUBDIR += linux-c7-unixODBC
 SUBDIR += linux-rl9-libtracker-sparql
 SUBDIR += linux-rl9-sqlite3
 SUBDIR += lmdb
+SUBDIR += mariadb-connector-c
 SUBDIR += mariadb106-client
 SUBDIR += mariadb106-server
 SUBDIR += mariadb114-client
