security/gcr: magus

--- a/security/gcr/Makefile
+++ b/security/gcr/Makefile
@@ -29,4 +29,6 @@ OPTIONS_DEFINE=	DOCS
 DOCS_BUILD_DEPENDS=	gi-docgen:textproc/py-gi-docgen@${PY_FLAVOR}
 DOCS_MESON_TRUE=	gtk_doc
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
