science/py-scipy: circular dependency

--- a/science/py-scipy/Makefile
+++ b/science/py-scipy/Makefile
@@ -24,16 +24,12 @@ BUILD_DEPENDS=	${PYNUMPY} \
 LIB_DEPENDS=	libblas.so:math/blas \
 		libopenblas.so:math/openblas
 RUN_DEPENDS=	${PYNUMPY}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}gmpy2>0:math/py-gmpy2@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}mpmath>0:math/py-mpmath@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pooch>0:devel/py-pooch@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-cov>0:devel/py-pytest-cov@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-timeout>0:devel/py-pytest-timeout@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-xdist>0:devel/py-pytest-xdist@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}scikit-umfpack>0:math/py-scikit-umfpack@${PY_FLAVOR}
 
 USES=		compiler:c++14-lang cpe fortran python:3.9-3.11 shebangfix
 USE_PYTHON=	autoplist concurrent cython distutils
+
+# circular dependency
+NO_TEST=	yes
 
 FFLAGS+=	-std=legacy
 LDFLAGS+=	-shared
@@ -51,8 +47,5 @@ post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
 	@${UNZIP_CMD} -d ${FAKE_DESTDIR}${DOCSDIR} ${DISTDIR}/scipy-html-${DISTVERSION}.zip
 	@${RM} ${FAKE_DESTDIR}${PREFIX}/share/doc/${PYTHON_PKGNAMEPREFIX}${PORTNAME}/.buildinfo
-
-do-test:
-	@cd ${WRKSRC} && ${TOUCH} .coveragerc && ${PYTHON_CMD} runtests.py
 
 .include <bsd.port.mk>
