www/py-gunicorn: test issue

--- a/www/py-gunicorn/Makefile
+++ b/www/py-gunicorn/Makefile
@@ -13,12 +13,12 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>0:devel/py-packaging@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}aiohttp>0:www/py-aiohttp@${PY_FLAVOR}
 
 USES=		cpe python
-USE_PYTHON=	autoplist concurrent distutils pytest
+USE_PYTHON=	autoplist concurrent distutils
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 OPTIONS_DEFINE=		PROCTITLE
 OPTIONS_DEFAULT=	PROCTITLE
