--- a/emulators/linux_base-rl9/Makefile
+++ b/emulators/linux_base-rl9/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	rl9
 PORTVERSION=	${LINUX_DIST_VER}
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	emulators linux
 PKGNAMEPREFIX=	linux_base-
 EXTRACT_ONLY=	${DISTFILES:N*${SRC_SUFX}*:Nf/filesystem-*:C/:[^:]+$//}
@@ -14,6 +14,7 @@ USES=		linux:rl9
 USE_LINUX=	# empty
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
+PLIST=                 ${PKGDIR}/pkg-plist.${ARCH}
 
 .include	"${.CURDIR}/Makefile.version"
 
