devel/Makefile: add to index

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -203,6 +203,7 @@ SUBDIR += json-glib
 SUBDIR += jsoncpp
 SUBDIR += judy
 SUBDIR += kBuild
+SUBDIR += kf6-extra-cmake-modules
 SUBDIR += kyua
 SUBDIR += lcov
 SUBDIR += lemon
