--- a/www/tomcat-native/Makefile
+++ b/www/tomcat-native/Makefile
@@ -13,8 +13,7 @@ LICENSE=	apache2
 
 LIB_DEPENDS=	libapr-1.so:devel/apr1
 
-USES=		libtool ssl
-USE_JAVA=	yes
+USES=		java libtool ssl
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-apr=${LOCALBASE} \
